<resources>
    <string name="app_name">Venting Diary</string>
    <string name="release">SAVE</string>
    <string name="start_writing">Start Venting</string>
    <string name="v2m">VD</string>
    <string name="begin">Begin</string>
    <string name="vent">Vent</string>
    <string name="tab_about_me">About Me</string>
    <string name="tab_diary">Diary</string>
    <string name="tab_text_1">About Me</string>
    <string name="tab_text_2">Diary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_playing">Not Playing</string>
    <string name="todo">TODO</string>
    <string name="view_entry">View Diary Entry</string>
    <string name="supporting_text">Vent2Me.2020_31_12_11_15_30.3gp</string>
    <string name="text_entry">What you wrote</string>
    <string name="load_entry">load</string>
    <string name="hear_entry">LISTEN TO DIARY ENTRY</string>
    <string name="asking_feelings">How Are You Feeling Today?</string>
    <string name="elated">Elated</string>
    <string name="happy">Happy</string>
    <string name="eh">Meh</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="elated_title">YOU ARE FEELING ELATED TODAY</string>
    <string name="elated_text">It\'s great to hear that you had an amazing day!</string>
    <string name="elated_dialog_button_text">TELL US ABOUT IT</string>
    <string name="happy_title">YOU ARE FEELING HAPPY TODAY</string>
    <string name="happy_text">It\'s great to hear that you had a good day!</string>
    <string name="happy_dialog_button_text">TELL US ABOUT YOUR DAY</string>
    <string name="meh_title">YOU ARE FEELING MEH TODAY</string>
    <string name="meh_text">IT\'S OKAY TO FEEL MEH SOME DAYS!</string>
    <string name="meh_dialog_button_text">TELL US WHY YOU FELT MEH</string>
    <string name="sad_title">YOU ARE FEELING SAD TODAY</string>
    <string name="sad_text">It\'s unfortunate to hear that.</string>
    <string name="sad_dialog_button_text">WOULD YOU LIKE TO RELIEVE SOME OF THAT SADNESS?</string>
    <string name="angry_title">YOU ARE FEELING ANGRY TODAY</string>
    <string name="angry_text">It\'s completely normal to feel angry and frustrated sometimes.</string>
    <string name="angry_dialog_button_text">WOULD YOU LIKE TO RELIEVE SOME OF THAT ANGER?</string>
    <string name="splash_title_name">Venting Diary</string>
    <string name="splash_slogan">Let It Out</string>
    <string name="delete_menu">Delete</string>
    <string name="text_reader">Text Reader</string>
    <string name="settings">Settings</string>
    <string name="daily_reminder">Daily Reminder:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="inputting_title">Type the Title of your Diary entry</string>
    <string name="select_time">Select Time</string>
    <string name="set_a_passcode">Set a Passcode</string>
    <string name="enter">Enter</string>
    <string name="para_label_text">Click the Button to use your Fingerprint</string>
</resources>