<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/setting_to_home"
            android:gravity="center_vertical"
            android:paddingTop="18dp"
            android:paddingBottom="6dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="38sp"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            tools:ignore="RtlCompat" />
        <ImageButton
            android:id="@+id/setting_to_home"
            android:layout_width="50dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:baselineAlignBottom="true"
            android:cropToPadding="true"
            android:src="@android:drawable/ic_delete"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/outline_back">

        <Switch
            android:id="@+id/reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autoSizeTextType="uniform"
            android:drawableLeft="@drawable/baseline_notifications_white_36"
            android:drawablePadding="8dp"
            android:paddingLeft="6dp"
            android:theme="@style/SCBSwitch"
            android:checked="true"
            android:text="@string/daily_reminder"
            android:textColor="@android:color/white"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:drawableStart="@drawable/baseline_notifications_white_36" />

        <Button
            android:id="@+id/notif_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/recordGoColor"
            android:gravity="center"
            android:hint="@string/select_time"
            android:onClick="setDate"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="23dp"
        android:background="@drawable/outline_back">

        <Button
            android:id="@+id/set_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autoSizeTextType="uniform"
            android:text="@string/set_a_passcode"
            android:drawablePadding="20dp"
            android:layout_marginRight="15dp"
            android:drawableRight="@drawable/plus"
            android:drawableTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:outlineAmbientShadowColor="@android:color/white"
            tools:targetApi="o"
            android:maxLines="1"
            android:drawableEnd="@drawable/plus"
            android:layout_marginEnd="15dp" />

        <Button
            android:id="@+id/remove_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autoSizeTextType="uniform"
            android:text="REMOVE YOUR PASSCODE"
            android:maxLines="1"
            android:drawablePadding="20dp"
            android:paddingLeft="35dp"
            android:layout_marginRight="15dp"
            android:drawableRight="@drawable/baseline_delete_black_36"
            android:drawableTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:background="@android:color/transparent"
            android:outlineAmbientShadowColor="@android:color/white"
            android:layout_marginTop="5dp"
            tools:targetApi="o"
            android:drawableEnd="@drawable/baseline_delete_black_36"
            android:layout_marginEnd="15dp"
            android:visibility="gone"
            android:paddingStart="35dp"
            android:outlineSpotShadowColor="@android:color/white"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="23dp"
        android:background="@drawable/outline_back">

        <Button
            android:id="@+id/export_all_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autoSizeTextType="uniform"
            android:background="@android:color/transparent"
            android:drawableEnd="@android:drawable/stat_sys_download_done"
            android:drawableRight="@android:drawable/stat_sys_download_done"
            android:drawablePadding="20dp"
            android:drawableTint="@android:color/white"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@android:color/white"
            android:text="Export all files"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:targetApi="o" />
    </LinearLayout>

    <Button
        android:id="@+id/home_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:autoSizeTextType="uniform"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:drawableTint="@android:color/white"
        android:maxLines="1"
        android:onClick="ToHomePage"
        android:outlineAmbientShadowColor="@android:color/white"
        android:text="View home"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>