<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:outlineSpotShadowColor="#EDFD04"
    android:visibility="visible">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="NotSibling" />





    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_pager">

        <ImageButton
            android:id="@+id/backToHome"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            android:onClick="MainActivity"
            android:src="@drawable/baseline_home_white_36" />

        <Spinner
            android:id="@+id/vent_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:lines="1"
            android:background="@drawable/spinner_bg"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"
            android:spinnerMode="dialog" />

        <ImageButton
            android:id="@+id/final_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/colorPrimary"
            android:src="@drawable/baseline_check_circle_black_36"
            android:tint="@android:color/holo_green_light"
            android:lines="1"
            android:layout_gravity="end"
            android:onClick="save2"
            android:text="@string/release"
            android:textColor="#000000"
            android:textSize="20sp"
            app:autoSizeTextType="uniform"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_layout"
        android:layout_marginTop="7dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/input_title"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="true"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/inputting_title"
            android:textColorHint="#FFFFFF"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/inputFeelings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputFeelings"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:autofillHints="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start|top"
            android:hint="@string/start_writing"
            android:textColorHint="#FFFFFF"
            android:inputType="textLongMessage|textAutoCorrect|textMultiLine|text"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:verticalScrollbarPosition="right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_title" />

    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>